src/test/deca/context/valid/created/sans_objet/affectation_boolean_1.deca
// Description:
//    Programme minimaliste utilisant boolean.
//
// Resultats:
//   
//
// Historique:
//    cree le 01/01/2024

{
        boolean x ;
        x=true;
}