src/test/deca/context/invalid/created/sans_objet/affectation_boolean_3.deca
// Description:
//    Programme minimaliste utilisant boolean.
//
// Resultats:
//   error :  ligne 12 : invalid assign
//
// Historique:
//    cree le 01/01/2024

{
        boolean x ;
        x="test";
}